--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "d3": "^3.5.17",
+    "d3-tip": "^0.7.1",
     "echarts": "^3.4.0",
     "jquery": "^3.1.1",
     "page": "^1.7.1",
