--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "d3-cloud": "^1.2.4",
     "echarts": "^3.4.0",
     "jquery": "^3.1.1",
+    "leaflet": "^0.7.5",
     "page": "^1.7.1",
     "reveal.js": "^3.4.0",
     "vue": "1.0.24",
